[package]
name = "clustersort"
version = "0.0.2"
description = "Rust port of xklb's cluster-sort util"
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/chapmanjacobd/clustersort"
homepage = "https://github.com/chapmanjacobd/library"

[dependencies]
clap = "4.5"
encoding = "0.2"
linfa = "0.7"
linfa-bayes = "0.7"
linfa-clustering = "0.7"
linfa-nn = "0.7"
linfa-preprocessing = "0.7"
ndarray = "0.15"
ndarray-rand = "0.15"
rand_xoshiro = "0.6"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
